--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "body-parser-xml": "^1.1.0",
     "co": "~4.6.0",
     "compression": "~1.7.0",
     "connect-flash": "~0.1.1",
@@ -54,6 +55,7 @@
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.3",
     "view-helpers": "~0.1.5",
+    "weixin-pay": "^1.1.7",
     "winston": "~2.4.0"
   },
   "devDependencies": {
